--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@netlify/functions": "^1.0.0",
     "@types/node": "^18.6.3",
+    "cypress": "^10.4.0",
     "dotenv": "^16.0.1"
   },
   "name": "netlify",
