--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "@netlify/functions": "^1.0.0",
-    "@types/node": "^18.6.3",
     "cypress": "^10.4.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-fetch": "^3.2.10"
   },
   "name": "netlify",
   "description": "Learn how to use serverless functions in less than 30 minutes!",
