--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 
 [build]
-  functions = "netlify/functions"
+  functions = "functions"
   publish = "public"
   environment = { NODE_VERSION = "18" }
