--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "dependencies": {
     "cypress": "^10.4.0",
     "dotenv": "^16.0.1",
+    "mongodb": "^4.8.1",
     "netlify-cli": "^10.17.4",
     "node-fetch": "^3.2.10",
-    "run-func": "^3.0.0"
+    "rubico": "^1.9.2"
   },
   "name": "netlify",
   "description": "serverless functions",
