rapid-api-convert-to-axios--static-files-with-change-in-netlify.toml--newsletter-field-btn-with-test--mongo-simple-find-from-cli

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,6 @@
   functions = "functions"
   publish = "public"
   environment = { NODE_VERSION = "18" }
+
+  [functions]
+  included_files= ["assets/**"]
