--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongodb": "^4.8.1",
     "netlify-cli": "^10.17.4",
     "node-fetch": "^3.2.10",
+    "node-ipinfo": "^3.1.1",
     "rubico": "^1.9.2"
   },
   "name": "netlify",
