tik2-9-heroku-netlify-similar-except-express-and-functions-tech-stack--moved-to-ts-on-server

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,11 @@
 [build]
   functions = "functions"
   publish = "public"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+
+[dev]
+  port=80
