--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "type": "module",
   "dependencies": {
+    "@netlify/functions": "^1.2.0",
+    "@types/mailgun-js": "^0.22.12",
     "axios": "^0.27.2",
     "cypress": "^10.7.0",
     "dotenv": "^16.0.1",
     "mailgun-js": "^0.22.0",
     "mongodb": "^4.8.1",
     "netlify-cli": "^10.17.4",
-    "node-fetch": "^3.2.10",
     "node-ipinfo": "^3.1.1",
-    "rubico": "^1.9.2"
+    "tsc": "^2.0.4"
   },
   "name": "netlify",
   "description": "serverless functions",
