cors-header-added-to-sys-function

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
   functions = "functions"
   publish = "public"
 
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+
 [dev]
   port=80
   autoLaunch = false
