--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "type": "module",
   "dependencies": {
     "@netlify/functions": "^1.2.0",
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
+    "@types/qs": "^6.9.7",
+    "axios": "^1.2.0",
     "mongodb": "^4.8.1",
+    "node-fetch": "^3.3.0",
     "node-ipinfo": "^3.1.1",
-    "oxford-dictionaries-api": "^0.1.2"
+    "oxford-dictionaries-api": "^0.1.2",
+    "qs": "^6.11.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.9.3"
   },
   "name": "netlify",
   "description": "serverless functions",
@@ -21,8 +25,6 @@
   },
   "homepage": "https://github.com/tik9/netlify#readme",
   "devDependencies": {
-    "@types/qs": "^6.9.7",
-    "cypress": "^10.7.0",
-    "tsc": "^2.0.4"
+    "cypress": "^10.7.0"
   }
 }
