--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "type": "module",
   "dependencies": {
-    "@netlify/functions": "^1.2.0",
-    "@types/qs": "^6.9.7",
+    "@netlify/functions": "^1.6.0",
+    "@types/node": "^20.10.5",
     "axios": "^1.3.3",
     "mongodb": "",
     "node-fetch": "^3.3.0",
     "node-ipinfo": "^3.1.1",
-    "oxford-dictionaries-api": "^0.1.2",
-    "qs": "^6.11.0",
+    "nodemailer": "^6.9.7",
     "tsc": "^2.0.4",
     "typescript": "^4.9.3"
   },
