--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "type": "module",
   "dependencies": {
-    "@netlify/functions": "^1.6.0",
+    "@netlify/functions": "^2.4.1",
     "@types/node": "^20.10.5",
     "axios": "^1.3.3",
     "mongodb": "",
     "node-fetch": "^3.3.0",
-    "node-ipinfo": "^3.1.1",
-    "nodemailer": "^6.9.7",
-    "tsc": "^2.0.4",
-    "typescript": "^4.9.3"
+    "node-ipinfo": "^3.5.1"
   },
   "name": "netlify",
   "description": "serverless functions",
