started-with-repo-fetching-graphql--mts-used-instead-of-ts-for-module-type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "module": "commonjs",
-        "outDir": "dest",
-        "rootDir": "src"
+        "module": "es6",
+        "target": "ES6",
+        "moduleResolution": "Node"
     },
     "exclude": [
         "node_modules"
-    ]
+    ],
 }
