--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
     "compilerOptions": {
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "sourceMap": true,
-        "module": "es6",
-        "target": "ES6",
-        "moduleResolution": "Node"
+        // "module": "NodeNext",
+        // "moduleResolution": "NodeNext",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
-    ],
+    ]
 }
