switched-from-mts-to-ts-fileextension--removed-type-commonjs-from-tsconfig--import-from-without-js-extension--issues-still-missing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        // "module": "NodeNext",
+        // "module": "CommonJS",
         // "moduleResolution": "NodeNext",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
