--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "type": "module",
   "dependencies": {
     "@netlify/functions": "^2.4.1",
     "@types/node": "^20.10.5",
+    "flat": "^6.0.1",
     "mongodb": "",
+    "netlify-cli": "^17.15.7",
     "node-fetch": "^3.3.0",
     "node-ipinfo": "^3.5.1",
     "puppeteer-core": "^21.7.0"
-  },
-  "description": "serverless functions"
+  }
 }
