--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        // "module": "CommonJS",
-        // "moduleResolution": "NodeNext",
+        "module": "ESNext",
+        "target": "ESNext",
+        "moduleResolution": "node",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true
