--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/node": "^20.10.5",
     "mongodb": "",
     "node-ipinfo": "^3.5.1",
-    "youtube-search": "^1.1.6"
+    "youtube-search": "^1.1.6",
+    "youtube-transcript": "^1.1.0"
   }
 }
